👍 Add task-log to server.properties

--- a/config/server.properties
+++ b/config/server.properties
@@ -8,3 +8,6 @@ database.host = postgres
 database.port = 5432
 database.database = digdag
 database.maximumPoolSize = 32
+
+log-server.type = local
+log-server.local.path = /var/log/digdag
